--- a/src/css/my-reset.less
+++ b/src/css/my-reset.less
@@ -1,8 +1,10 @@
+*{
+    font-family: sans-serif;
+    font-size: 14px;
+}
 html{
     box-sizing: border-box;
     h1, h2, h3, h4, h5, h6, p, ul, li{
-        font-family: sans-serif;
-        font-size: 14px;
         margin: 0;
         padding: 0;
     }
